--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
             </ul>
         </nav>
         <ul class="contact-list">
-            <li><a class="mail" href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="tel" href="+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="mail" href="info@devstudio.com">
+                <svg class="mail-icon">
+                    <use href="/images/icons.svg#icon-mail"></use>
+                </svg> info@devstudio.com</a>
+            </li>
+            <li><a class="tel" href="+380961111111">
+                <svg class="tel-icon">
+                    <use href="/images/icons.svg#icon-tel"></use>
+                </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
     </header>
