--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <section class="banner">
-            <div class="container hero-container">
+            <div class="hero-container">
             <h1 class="text-logo">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button" class="hero-button">Заказать услугу</button>
             </div>
@@ -51,21 +51,41 @@
             <h2 class="visualy-hidden"></h2>
             <ul class="features">
                 <li class="feature-list">
+                    <div class="feature-icon">
+                    <svg class="feature-one">
+                        <use href="/images/icons.svg#icon-antenna"></use>
+                    </svg>
+                    </div>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
 
                 <li class="feature-list">
+                    <div class="feature-icon">
+                        <svg class="feature-one">
+                            <use href="/images/icons.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
 
                 <li class="feature-list">
+                    <div class="feature-icon">
+                        <svg class="feature-one">
+                            <use href="/images/icons.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
 
                 <li class="feature-list">
+                    <div class="feature-icon">
+                        <svg class="feature-one">
+                            <use href="/images/icons.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
