icons for features

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul class="features">
                 <li class="feature-list">
                     <div class="feature-icon">
-                    <svg class="feature-one">
+                    <svg class="feature-item" width="65" height="70">
                         <use href="/images/icons.svg#icon-antenna"></use>
                     </svg>
                     </div>
@@ -62,8 +62,8 @@
 
                 <li class="feature-list">
                     <div class="feature-icon">
-                        <svg class="feature-one">
-                            <use href="/images/icons.svg#icon-antenna"></use>
+                        <svg class="feature-item" width="67" height="70">
+                            <use href="/images/icons.svg#icon-clock"></use>
                         </svg>
                     </div>
                     <h3>Пунктуальность</h3>
@@ -72,8 +72,8 @@
 
                 <li class="feature-list">
                     <div class="feature-icon">
-                        <svg class="feature-one">
-                            <use href="/images/icons.svg#icon-antenna"></use>
+                        <svg class="feature-item" width="70" height="53">
+                            <use href="/images/icons.svg#icon-diagram" ></use>
                         </svg>
                     </div>
                     <h3>Планирование</h3>
@@ -82,8 +82,8 @@
 
                 <li class="feature-list">
                     <div class="feature-icon">
-                        <svg class="feature-one">
-                            <use href="/images/icons.svg#icon-antenna"></use>
+                        <svg class="feature-item" width="54" height="60">
+                            <use href="/images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
                     <h3>Современные технологии</h3>
@@ -131,6 +131,37 @@
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
                 </div>
+                <div class="social">
+                    <ul class="social-links">
+                    <li class="social-item">
+                        <a href="#">
+                            <svg class="social icon" width="44" height="44">
+                                <use href="/images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item"><a href="#">
+                        <svg class="social icon" width="44" height="44">
+                            <use href="/images/icons.svg#icon-instagram"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#">
+                            <svg class="social icon" width="44" height="44">
+                                <use href="/images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#">
+                            <svg class="social icon" width="44" height="44">
+                                <use href="/images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li class="social-item">
+                    </ul>
+                </div>
             </li>
             <li class="individ">
                 <img src="./images/photo2.jpg" alt="работник2" width="270"/>
@@ -155,6 +186,19 @@
             </li>
         </ul>
         </div>
+        </section>
+        <section>
+            <div>
+                <h2></h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
