--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </nav>
         <ul class="contact-list">
             <li><a class="mail" href="info@devstudio.com">
-                <svg class="mail-icon">
+                <svg class="mail-icon" width="16" height="12">
                     <use href="/images/icons.svg#icon-mail"></use>
                 </svg> info@devstudio.com</a>
             </li>
             <li><a class="tel" href="+380961111111">
-                <svg class="tel-icon">
+                <svg class="tel-icon" width="10" height="16">
                     <use href="/images/icons.svg#icon-tel"></use>
                 </svg>+38 096 111 11 11</a></li>
         </ul>
@@ -134,16 +134,15 @@
                 <div class="social">
                     <ul class="social-links">
                     <li class="social-item">
-                        <a href="" class="social icon">
-                            <svg width="44" height="44">
+                        <a href="">
+                            <svg width="20" height="20">
                                 <use href="/images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        
-                        <svg class="social icon" width="44" height="44">
-                            <a href="">
+                    <li class="social-item" width="44" height="44">
+                        <a href="" class="social icon">
+                        <svg width="20" height="20" >
                             <use href="/images/icons.svg#icon-twitter"></use>
                             </a>
                         </svg>
@@ -151,18 +150,18 @@
                     </li>
                     <li class="social-item">
                         <a href="">
-                            <svg class="social icon" width="44" height="44">
+                            <svg class="social icon" width="20" height="20">
                                 <use href="/images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="">
-                            <svg class="social icon" width="44" height="44">
+                            <svg class="social icon" width="20" height="20">
                                 <use href="/images/icons.svg#icon-linked"></use>
                             </svg>
                         </a>
-                    </li class="social-item">
+                    </li>
                     </ul>
                 </div>
             </li>
@@ -174,9 +173,9 @@
                 </div>
                 <div class="social">
                     <ul class="social-links">
-                        <li class="social-item">
+                        <li class="social-item" width="40" height="40">
                             <a href="" class="social icon">
-                                <svg width="44" height="44">
+                                <svg width="20" height="20">
                                     <use href="/images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
@@ -217,14 +216,14 @@
                     <ul class="social-links">
                         <li class="social-item">
                             <a href="" class="social icon">
-                                <svg width="44" height="44">
+                                <svg width="20" height="20">
                                     <use href="/images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-item">
+                        <li class="social-item" width="44" height="44">
                 
-                            <svg class="social icon" width="44" height="44">
+                            <svg class="social icon" width="10" height="10">
                                 <a href="">
                                     <use href="/images/icons.svg#icon-twitter"></use>
                                 </a>
