--- a/index.html
+++ b/index.html
@@ -291,22 +291,53 @@
                 <ul class="client-list">
                     <li class="client-pozition">
                         <a href="">
-                        <svg width="41" height="46">
+                        <svg width="106" height="60">
                             <use href="/images/icons.svg#icon-clientone"></use>
                         </svg>
                         </a>
                     </li>
-                    <li class="client-pozition"></li>
-                    <li class="client-pozition"></li>
-                    <li class="client-pozition"></li>
-                    <li class="client-pozition"></li>
-                    <li class="client-pozition"></li>
+                    <li class="client-pozition">
+                        <a href="">
+                            <svg width="106" height="60">
+                                <use href="/images/icons.svg#icon-clienttwo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-pozition">
+                        <a href="">
+                            <svg width="106" height="60">
+                                <use href="/images/icons.svg#icon-clientthree"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-pozition">
+                        <a href="">
+                            <svg width="106" height="60">
+                                <use href="/images/icons.svg#icon-clientfour"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-pozition">
+                        <a href="">
+                            <svg width="106" height="60">
+                                <use href="/images/icons.svg#icon-clientfive"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-pozition">
+                        <a href="">
+                            <svg width="106" height="60">
+                                <use href="/images/icons.svg#icon-clientsix"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
             <div class="container foot-container">
+                <div>
                 <a class="logo" href="/">Web<span class="webfoot">Studio</span></a>
                 <address class="adress">
                     <ul class="contacts">
@@ -318,7 +349,43 @@
                         <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
                     </ul>
                 </address>
+                </div>
+                <div class="links-container">
+                <h3>ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <ul class="links-list">
+                    <li class="links-item"
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="links-item">
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="links-item">
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="links-item">
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                </div>
             </div>
+                
+
     </footer>
 </body>
 </html>
