--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,19 @@
                 <ul class="menu">
                     <li><a href="./index.html" class="navigation-link ">Студия</a></li>
                     <li><a href="./portfolio.html" class="navigation-link current">Портфолио</a></li>
-                    <li><a href=" ./"class="navigation-link">Контакты</a></li>
+                        <li><a href=" ./"class="navigation-link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact-list">
-                <li><a class="mail" href="info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="tel" href="+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="mail" href="info@devstudio.com">
+                        <svg class="mail-icon" width="16" height="12">
+                            <use href="/images/icons.svg#icon-mail"></use>
+                        </svg> info@devstudio.com</a>
+                </li>
+                <li><a class="tel" href="+380961111111">
+                        <svg class="tel-icon" width="10" height="16">
+                            <use href="/images/icons.svg#icon-tel"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -54,6 +61,7 @@
             </ul>
             <ul class="examples">
                 <li class="item">
+                    <a href="">
                     <img src="./images/techweb.jpg"
                     alt="website"
                     width="370"
@@ -62,8 +70,10 @@
                     <h3>Технокряк</h3>
                     <p>Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/poster.jpg"
                     alt="poster"
                     width="370"
@@ -72,8 +82,10 @@
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/restaurant.jpg"
                     alt="restaurant"
                     width="370"
@@ -82,8 +94,10 @@
                     <h3>Ресторан Seafood</h3>
                     <p>Приложение</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/prime.jpg"
                     alt="prime"
                     width="370"
@@ -92,8 +106,10 @@
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/boxes.jpg"
                     alt="boxes"
                     width="370"
@@ -102,8 +118,10 @@
                     <h3>Проект Boxes</h3>
                     <p>Приложение</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/inspiration.jpg"
                     alt="website"
                     width="370"
@@ -112,8 +130,10 @@
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/designle.jpg"
                     alt="design"
                     width="370"
@@ -122,8 +142,10 @@
                     <h3>Издание Limited Edition</h3>
                     <p>Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/projectlab.jpg"
                     alt="project"
                     width="370"
@@ -132,8 +154,10 @@
                     <h3>Проект LAB</h3>
                     <p>Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="item">
+                    <a href="">
                     <img src="./images/notebook.jpg"
                     alt="notebook"
                     width="370"
@@ -142,6 +166,7 @@
                     <h3>Growing Business</h3>
                     <p>Приложение</p>
                     </div>
+                    </a>
                 </li>
             </ul>
             </div>
@@ -149,16 +174,51 @@
     </main>
     <footer class="footer">
         <div class="container foot-container">
-            <a class="logo" href="/">Web<span class="webfoot">Studio</span></a>
-            <address class="adress">
-                <ul class="contacts">
-                    <li><a class="atext" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев,
-                            пр-т
-                            Леси Украинки, 26</a> </li>
-                    <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a> </li>
-                    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+            <div>
+                <a class="logo" href="/">Web<span class="webfoot">Studio</span></a>
+                <address class="adress">
+                    <ul class="contacts">
+                        <li><a class="atext" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г.
+                                Киев,
+                                пр-т
+                                Леси Украинки, 26</a> </li>
+                        <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a> </li>
+                        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="links-container">
+                <h3>ПРИСОЕДИНЯЙТЕСЬ</h3>
+                <ul class="links-list">
+                    <li class="links-item" <a href="">
+                        <svg width="20" height="20">
+                            <use href="/images/icons.svg#icon-instagram"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="links-item">
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="links-item">
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="links-item">
+                        <a href="">
+                            <svg width="20" height="20">
+                                <use href="/images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
