--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <ul class="contact-list">
             <li><a class="mail" href="info@devstudio.com">
                 <svg class="mail-icon" width="16" height="12">
-                    <use href="/images/icons.svg#icon-mail"></use>
+                    <use href="./images/icons.svg#icon-mail"></use>
                 </svg> info@devstudio.com</a>
             </li>
             <li><a class="tel" href="+380961111111">
                 <svg class="tel-icon" width="10" height="16">
-                    <use href="/images/icons.svg#icon-tel"></use>
+                    <use href="./images/icons.svg#icon-tel"></use>
                 </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
@@ -53,7 +53,7 @@
                 <li class="feature-list">
                     <div class="feature-icon">
                     <svg class="feature-item" width="65" height="70">
-                        <use href="/images/icons.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg#icon-antenna"></use>
                     </svg>
                     </div>
                     <h3>Внимание к деталям</h3>
@@ -63,7 +63,7 @@
                 <li class="feature-list">
                     <div class="feature-icon">
                         <svg class="feature-item" width="67" height="70">
-                            <use href="/images/icons.svg#icon-clock"></use>
+                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                     </div>
                     <h3>Пунктуальность</h3>
@@ -73,7 +73,7 @@
                 <li class="feature-list">
                     <div class="feature-icon">
                         <svg class="feature-item" width="70" height="53">
-                            <use href="/images/icons.svg#icon-diagram" ></use>
+                            <use href="./images/icons.svg#icon-diagram" ></use>
                         </svg>
                     </div>
                     <h3>Планирование</h3>
@@ -83,7 +83,7 @@
                 <li class="feature-list">
                     <div class="feature-icon">
                         <svg class="feature-item" width="54" height="60">
-                            <use href="/images/icons.svg#icon-astronaut"></use>
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
                     <h3>Современные технологии</h3>
@@ -136,14 +136,14 @@
                     <li class="social-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="">
                         <svg width="20" height="20" >
-                            <use href="/images/icons.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-twitter"></use>
                             </a>
                         </svg>
                         
@@ -151,14 +151,14 @@
                     <li class="social-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="">
                             <svg  width="20" height="20">
-                                <use href="/images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -176,28 +176,28 @@
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                             <svg width="20" height="20"> 
-                                    <use href="/images/icons.svg#icon-twitter"></use>     
+                                    <use href="./images/icons.svg#icon-twitter"></use>     
                             </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li class="social-item">
@@ -215,28 +215,28 @@
                         <li class="social-item">
                             <a href="" >
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                             <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li class="social-item">
@@ -254,28 +254,28 @@
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                             <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="">
                                 <svg width="20" height="20">
-                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -292,42 +292,42 @@
                     <li class="client-pozition">
                         <a href="">
                         <svg width="106" height="60">
-                            <use href="/images/icons.svg#icon-clientone"></use>
+                            <use href="./images/icons.svg#icon-clientone"></use>
                         </svg>
                         </a>
                     </li>
                     <li class="client-pozition">
                         <a href="">
                             <svg width="106" height="60">
-                                <use href="/images/icons.svg#icon-clienttwo"></use>
+                                <use href="./images/icons.svg#icon-clienttwo"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-pozition">
                         <a href="">
                             <svg width="106" height="60">
-                                <use href="/images/icons.svg#icon-clientthree"></use>
+                                <use href="./images/icons.svg#icon-clientthree"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-pozition">
                         <a href="">
                             <svg width="106" height="60">
-                                <use href="/images/icons.svg#icon-clientfour"></use>
+                                <use href="./images/icons.svg#icon-clientfour"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-pozition">
                         <a href="">
                             <svg width="106" height="60">
-                                <use href="/images/icons.svg#icon-clientfive"></use>
+                                <use href="./images/icons.svg#icon-clientfive"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-pozition">
                         <a href="">
                             <svg width="106" height="60">
-                                <use href="/images/icons.svg#icon-clientsix"></use>
+                                <use href="./images/icons.svg#icon-clientsix"></use>
                             </svg>
                         </a>
                     </li>
@@ -356,28 +356,28 @@
                     <li class="links-item"
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
