--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,12 @@
             <ul class="contact-list">
                 <li><a class="mail" href="info@devstudio.com">
                         <svg class="mail-icon" width="16" height="12">
-                            <use href="/images/icons.svg#icon-mail"></use>
+                            <use href="./images/icons.svg#icon-mail"></use>
                         </svg> info@devstudio.com</a>
                 </li>
                 <li><a class="tel" href="+380961111111">
                         <svg class="tel-icon" width="10" height="16">
-                            <use href="/images/icons.svg#icon-tel"></use>
+                            <use href="./images/icons.svg#icon-tel"></use>
                         </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
@@ -192,28 +192,28 @@
                 <ul class="links-list">
                     <li class="links-item" <a href="">
                         <svg width="20" height="20">
-                            <use href="/images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                         </a>
                     </li>
                     <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
-                                <use href="/images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
