--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="links-container">
                 <h3>ПРИСОЕДИНЯЙТЕСЬ</h3>
                 <ul class="links-list">
-                    <li class="links-item"
+                    <li class="links-item">
                         <a href="">
                             <svg width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
