--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </a>
             <ul class="menu">
                 <li><a href="./index.html" class="navigation-link current">Студия</a></li>
-                <li><a href="./portfolio.html"class="navigation-link"">Портфолио</a></li>
-                <li><a href="./"class="navigation-link">Контакты</a></li>
+                <li><a href="./portfolio.html" class="navigation-link">Портфолио</a></li>
+                <li><a href="./" class="navigation-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact-list">
