--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="head">
         <div class="container head-container">
         <nav class="nav-list">
-            <a class="logo" href="/" lang="en">
+            <a class="logo" href="./index.html" lang="en">
                 Web<span class="studio">Studio</span>
             </a>
             <ul class="menu">
@@ -130,8 +130,6 @@
                 <div class="name-prof">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
-                </div>
-                <div class="social">
                     <ul class="social-links">
                     <li class="social-item">
                         <a href="">
@@ -170,8 +168,6 @@
                 <div class="name-prof">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
-                </div>
-                <div class="social">
                     <ul class="social-links">
                         <li class="social-item">
                             <a href="">
@@ -209,8 +205,6 @@
                 <div class="name-prof">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
-                </div>
-                <div class="social">
                     <ul class="social-links">
                         <li class="social-item">
                             <a href="" >
@@ -248,8 +242,6 @@
                 <div class="name-prof">       
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
-                </div>
-                <div class="social">
                     <ul class="social-links">
                         <li class="social-item">
                             <a href="">
