--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header class="head">
         <div class="container head-container">
             <nav class="nav-list">
-                <a class="logo" href="/" lang="en">
+                <a class="logo" href="./index.html" lang="en">
                     Web<span class="studio">Studio</span>
                 </a>
                 <ul class="menu">
